# VirtuCLI

./: README.md  config.ini.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
virtucli/: main.py
virtucli/api/: api.py
virtucli/functions/: vdf.py
