[tool.poetry]
name = "virtucli"
version = "0.8.0"
description = "Basic management of Virtualizor VMs from CLI."
authors = ["Hendra Manudinata <manoedinata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
